--- a/css/index.css
+++ b/css/index.css
@@ -18,6 +18,7 @@ h1{
     font-size: 50px;
     animation-name: simpleCalculator;
     animation-duration: 4s;
+    animation-timing-function:ease-in-out;
     color: #000000;
     
 
@@ -25,6 +26,7 @@ h1{
 @keyframes simpleCalculator{
     from{color:#cfcfcf;}
     to{color:#000000;}
+
     
     
 }
@@ -32,6 +34,8 @@ body{
     background-color: #cfcfcf;
     animation-name:bodyColor;
     animation-duration:4s;
+    animation-timing-function:ease-in-out;
+
 }
 @keyframes bodyColor{
     from{background-color: #cfcfcf;}
